--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Yusuf Isse – Resume</title>
 </head>
 <body>
-    <h1>Yusuf Isse – Resume</h1>
-    <p>Click below to view my resume:</p>
-    <a href="Yusuf_CV.pdf" target="_blank">View Resume (PDF)</a>
+    <iframe src="Yusuf_CV.pdf" width="100%" height="100%" style="min-height: 100vh; border: none;"></iframe>
+
 </body>
 </html>
